@@ -1,4 +1,4 @@
-### 1、git怎么忽略.idea文件夹中的内容出现在change list中
+# 1、git怎么忽略.idea文件夹中的内容出现在change list中
 
 要在Git中忽略`.idea`文件夹及其内容，以防止其出现在变更列表中，你可以使用`.gitignore`文件来定义要忽略的文件和文件夹。`.gitignore`文件包含一些通配符规则，告诉Git哪些文件和文件夹应该被忽略。
 
@@ -31,7 +31,7 @@ git rm -r --cached .idea/
 
 这将从Git中移除`.idea`文件夹的内容，但保留本地文件。然后，提交这一变更。这样，`.idea`文件夹及其内容将不再受Git版本控制，并且不会出现在变更列表中。
 
-### 2、git default changelist中出现了target文件中的文件，怎么移除
+# 2、git default changelist中出现了target文件中的文件，怎么移除
 
 Git的默认更改列表（default changelist）通常是IDEA中的功能，用于暂时存放你的更改，但不会将它们提交到版本控制系统中。如果`target`文件夹中的文件出现在默认更改列表中，你可以执行以下步骤来将它们从默认更改列表中移除：
 
@@ -53,7 +53,7 @@ Git的默认更改列表（default changelist）通常是IDEA中的功能，用�
 
 这将允许你从默认更改列表中将`target`文件夹中的文件分离出来，并在需要时将它们包含在提交中。请注意，Git仍然会跟踪`target`文件夹中的文件，但它们不再出现在默认更改列表中。如果你不想让Git跟踪`target`文件夹中的文件，你可以将它们添加到`.gitignore`文件中，如前面的回答中所述。
 
-### 3、idea的default changelist中文件的颜色表示什么意思
+# 3、idea的default changelist中文件的颜色表示什么意思
 
 在IntelliJ IDEA的Default Changelist中，文件的颜色通常用来表示文件的状态。不同颜色表示不同的状态，以下是一些常见的颜色和它们的含义：
 
@@ -67,4 +67,378 @@ Git的默认更改列表（default changelist）通常是IDEA中的功能，用�
 
 这些颜色表示可以帮助你更容易地识别在Default Changelist中的文件的状态。你可以根据这些颜色来判断是否需要将文件添加到Git暂存区，或者提交你的更改。这有助于版本控制和跟踪项目中的文件状态。
 
-### 4.
+# 4.java启动参数 -D -X
+
+Java 启动参数中的 `-D` 和 `-X` 分别用于设置系统属性和控制 Java 虚拟机的行为。下面是关于这两个常见参数的更多详细信息：
+
+1. **-D 参数：**
+
+   `-D` 参数用于设置系统属性。系统属性是键值对，用于在 Java 程序中配置和控制各种行为。你可以通过在启动 Java 应用程序时使用 `-D` 参数来定义系统属性。
+
+   例如，以下命令设置名为 `myproperty` 的系统属性的值为 "example"：
+
+   ```bash
+   java -Dmyproperty=example -jar MyApp.jar
+   ```
+
+   在应用程序中，你可以使用 `System.getProperty("myproperty")` 来获取该系统属性的值。
+
+2. **-X 参数：**
+
+   `-X` 参数用于控制 Java 虚拟机的行为，通常用于调整性能和内存管理等方面。这些参数通常以 `-X` 开头，后跟参数名称和相应的值。
+
+   例如，以下命令设置 Java 堆的初始大小和最大大小：
+
+   ```bash
+   java -Xms256m -Xmx1024m -jar MyApp.jar
+   ```
+
+   - `-Xms` 用于设置初始堆大小。
+   - `-Xmx` 用于设置最大堆大小。
+
+   除了上述示例，还有许多其他 `-X` 参数可用，用于配置垃圾收集器、性能调整、线程堆栈大小等。这些参数的详细信息可以在 Java 官方文档中找到。
+
+总之，`-D` 参数用于设置系统属性，而 `-X` 参数用于控制 Java 虚拟机的各种方面。你可以根据你的应用程序的需求使用这些参数，以优化性能和配置行为。记住，在使用这些参数时要小心，以确保不会引起不必要的问题或资源浪费。
+
+# 5.java启动参数大全
+
+```
+java [options] <主类> [args...]
+           （执行类）
+   或  java [options] -jar <jar 文件> [args...]
+           （执行 jar 文件）
+   或  java [options] -m <模块>[/<主类>] [args...]
+       java [options] --module <模块>[/<主类>] [args...]
+           （执行模块中的主类）
+   或  java [options] <源文件> [args]
+           （执行单个源文件程序）
+
+ 将主类、源文件、-jar <jar 文件>、-m 或
+ --module <模块>/<主类> 后的参数作为参数
+ 传递到主类。
+```
+
+Java 启动参数（Java Startup Options）是在运行 Java 应用程序时传递给 Java 虚拟机（JVM）的选项和参数，它们可以用于配置 JVM 的行为、内存管理、性能优化等。以下是一些常见的 Java 启动参数和选项的列表：
+
+1. **通用选项：**
+   - `-classpath` 或 `-cp`：设置类路径。
+   - `-D<property>=<value>`：设置 Java 系统属性。
+   - `-verbose[:class|gc|jni]`：启用详细输出，用于类加载、垃圾收集或 JNI 调用。
+   - `-Xss<size>`：设置线程堆栈大小。
+   - `-Xms<size>`：设置初始堆大小。
+   - `-Xmx<size>`：设置最大堆大小。
+   - `-Xmn<size>`：设置新生代堆大小。
+   - `-Xss<size>`：设置线程堆栈大小。
+   - `-Xmx<size>`：设置最大堆大小。
+   - `-Xss<size>`：设置线程堆栈大小。
+
+2. **垃圾收集器选项：**
+   - `-XX:+UseSerialGC`：使用串行垃圾收集器。
+   - `-XX:+UseParallelGC`：使用并行垃圾收集器。
+   - `-XX:+UseConcMarkSweepGC`：使用 CMS 垃圾收集器。
+   - `-XX:+UseG1GC`：使用 G1 垃圾收集器。
+   - `-XX:+UseZGC`：使用 ZGC 垃圾收集器。
+   - `-XX:+UseShenandoahGC`：使用 Shenandoah 垃圾收集器。
+
+3. **性能和调优选项：**
+   - `-XX:MaxPermSize`：设置永久代最大大小。
+   - `-XX:MaxMetaspaceSize`：设置元空间最大大小。
+   - `-XX:MaxDirectMemorySize`：设置直接内存最大大小。
+   - `-XX:SurvivorRatio`：设置新生代中 Eden 区与 Survivor 区的比例。
+   - `-XX:NewRatio`：设置新生代与老年代的比例。
+   - `-XX:MaxGCPauseMillis`：设置最大垃圾收集停顿时间。
+
+4. **调试选项：**
+   - `-Xdebug`：开启远程调试。
+   - `-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=<port>`：配置 JDWP 远程调试器。
+   - `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=<port>`：同上，用于旧版本的 JVM。
+
+5. **性能分析选项：**
+   - `-Xprof`：启用性能分析器。
+   - `-Xrunhprof`：运行 HPROF 性能分析器。
+
+6. **启动应用程序：**
+   - `<main-class>`：指定应用程序的主类。
+   - `<args>`：传递给主类的参数。
+
+这只是一部分 Java 启动参数的示例。具体的参数可以根据你的应用程序和性能需求进行调整。你可以使用 `java -h` 或 `java -X` 命令来查看支持的选项和参数的完整列表，以获取更详细的信息。不同的 Java 版本和发行版可能会有不同的选项和参数，因此请查阅相关文档以获取准确的信息。
+
+# springcloud自定义异常处理类继承AbstractErrorWebExceptionHandler、继承RuntimeException和继承DefaultErrorAttributes三者的区别
+
+在Spring Cloud应用中，你可以使用三种不同的方式来处理异常，分别是继承`AbstractErrorWebExceptionHandler`、继承`RuntimeException`，以及继承`DefaultErrorAttributes`，它们有不同的用途和功能。
+
+1. 继承 `AbstractErrorWebExceptionHandler`：
+   - `AbstractErrorWebExceptionHandler`通常用于处理全局的Web请求级别异常，如404 Not Found、500 Internal Server Error等。
+   - 通过继承`AbstractErrorWebExceptionHandler`，你可以创建一个全局异常处理器，捕获未处理的异常，然后将它们转换为适当的HTTP响应，以提供友好的错误信息。
+   - 这种方式主要用于处理框架和Servlet容器级别的异常，通常与Spring Web的异常处理机制相关。
+
+2. 继承 `RuntimeException`：
+   - 继承`RuntimeException`通常用于自定义应用程序级别的异常，即业务逻辑中可能会抛出的异常。
+   - 这种方式不涉及Spring Web的异常处理机制，而是用于在应用程序中定义和抛出自定义异常。
+   - 自定义的异常类通常包含异常信息、错误代码、异常原因等，以便在应用程序的业务逻辑中抛出和捕获这些异常，然后根据需要进行处理。
+
+3. 继承 `DefaultErrorAttributes`：
+   - `DefaultErrorAttributes`是Spring Framework中用于控制错误属性的默认实现，通常用于自定义错误响应的内容。
+   - 通过继承`DefaultErrorAttributes`，你可以扩展或修改错误响应中的属性，例如添加自定义的错误信息或错误码。
+   - 这种方式通常用于微调全局的错误响应属性，以提供更详细或自定义的错误信息，而不是全局异常处理。
+
+总的来说，这三种方式在Spring Cloud应用中用于不同的目的：
+- `AbstractErrorWebExceptionHandler`主要用于处理全局的Web请求级别异常。
+- `RuntimeException`主要用于定义和处理应用程序级别的自定义异常。
+- `DefaultErrorAttributes`主要用于自定义全局错误响应属性，而不是全局异常处理。你可以根据需要选择其中一种或多种方式来处理异常和自定义错误响应。
+
+# java枚举对象的name()方法获取的是什么
+
+在Java中，枚举类型的对象有一个名为`name()`的方法，它用于获取枚举常量的名称。具体来说，`name()`方法返回的是枚举常量在枚举类型中的定义顺序的名称，这是一个字符串。
+
+例如，如果你有一个名为`Color`的枚举类型，并定义了以下枚举常量：
+
+```java
+enum Color {
+    RED, GREEN, BLUE
+}
+```
+
+你可以使用`name()`方法来获取每个枚举常量的名称：
+
+```java
+Color red = Color.RED;
+String colorName = red.name(); // 获取枚举常量的名称，这里会返回字符串 "RED"
+```
+
+`name()`方法返回的是常量的名称，而不是枚举常量的值。在上面的例子中，`name()`方法会返回字符串"RED"，而不是枚举常量的实际值。这个方法通常在需要将枚举常量转化为字符串时使用，例如在日志记录、输出、或其他需要显示枚举常量名称的场合。
+
+# 为什么使用@requiredArgsConstructor可以实现自动注入
+
+解释：不是这个注解实现了自动注入，而是它实现了全参数的构造函数，在较新版的Spring中可以显示对构造函数实现自动注入
+
+以下是chatGPT的回答
+
+在Spring框架中，构造函数注入是一种依赖注入的方式，通过构造函数来注入Bean的依赖关系。这种方式被认为是一种推荐的注入方式，因为它提供了更好的可测试性和更明确的依赖关系。使用构造函数注入时，你可以通过在构造函数上使用`@Autowired`注解或者省略`@Autowired`，Spring会自动识别构造函数并进行注入。
+
+以下是一个简单的示例：
+
+```java
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+@Service
+public class MyService {
+    private final MyRepository myRepository;
+
+    // 使用 @Autowired 注解进行构造函数注入
+    @Autowired
+    public MyService(MyRepository myRepository) {
+        this.myRepository = myRepository;
+    }
+
+    public void doSomething() {
+        // 使用 myRepository 进行操作
+    }
+}
+```
+
+在这个例子中，`MyService` 类使用构造函数注入 `MyRepository` 类型的依赖。`@Autowired` 注解告诉Spring在初始化`MyService`时，通过构造函数将`MyRepository`的实例注入进来。
+
+在较新版本的Spring中，`@Autowired`注解可以省略，Spring会自动识别构造函数进行注入，如下所示：
+
+```java
+import org.springframework.stereotype.Service;
+
+@Service
+public class MyService {
+    private final MyRepository myRepository;
+
+    // 省略 @Autowired 注解
+    public MyService(MyRepository myRepository) {
+        this.myRepository = myRepository;
+    }
+
+    public void doSomething() {
+        // 使用 myRepository 进行操作
+    }
+}
+```
+
+无论是否使用 `@Autowired` 注解，Spring都会在初始化 `MyService` 时自动检测构造函数并进行依赖注入。
+
+# stream流的中间操作和终端操作都有哪些，怎么使用
+
+Stream流提供了许多中间操作和终端操作，这些操作允许你以函数式的方式对流中的元素进行处理和操作。这些操作可以串联起来形成一个流水线，最终产生你需要的结果。
+
+### 中间操作（Intermediate Operations）：
+
+1. **filter：** 过滤流中的元素。
+    ```java
+    stream.filter(x -> x > 5)
+    ```
+
+2. **map：** 将流中的每个元素映射到另一个值。
+    ```java
+    stream.map(x -> x * 2)
+    ```
+
+3. **flatMap：** 将流中的每个元素映射为流，然后将这些流连接成一个流。
+    ```java
+    stream.flatMap(list -> list.stream())
+    ```
+
+4. **distinct：** 去除流中的重复元素。
+    ```java
+    stream.distinct()
+    ```
+
+5. **sorted：** 对流中的元素进行排序。
+    ```java
+    stream.sorted()
+    ```
+
+6. **limit：** 截断流使其最多只包含指定数量的元素。
+    ```java
+    stream.limit(5)
+    ```
+
+7. **skip：** 跳过流中的指定数量的元素。
+    ```java
+    stream.skip(3)
+    ```
+
+### 终端操作（Terminal Operations）：
+
+1. **forEach：** 对流中的每个元素执行操作。
+    ```java
+    stream.forEach(System.out::println)
+    ```
+
+2. **collect：** 将流中的元素收集到集合中。
+    ```java
+    List<Integer> list = stream.collect(Collectors.toList())
+    ```
+
+3. **reduce：** 对流中的元素进行归约操作，如求和、求积等。
+    ```java
+    Optional<Integer> result = stream.reduce((x, y) -> x + y)
+    ```
+
+4. **count：** 返回流中元素的数量。
+    ```java
+    long count = stream.count()
+    ```
+
+5. **anyMatch、allMatch、noneMatch：** 检查流中的元素是否满足给定的条件。
+    ```java
+    boolean anyMatch = stream.anyMatch(x -> x > 5)
+    boolean allMatch = stream.allMatch(x -> x > 5)
+    boolean noneMatch = stream.noneMatch(x -> x > 5)
+    ```
+
+6. **findFirst、findAny：** 返回流中的第一个元素或任意一个元素。
+    ```java
+    Optional<Integer> first = stream.findFirst()
+    Optional<Integer> any = stream.findAny()
+    ```
+
+这些操作可以组合使用，形成一个操作流水线。中间操作返回一个新的流，因此可以串联多个中间操作。最后，使用一个终端操作来触发整个流的处理并得到最终的结果。
+
+# java怎么定义一个范型类和方法
+
+在Java中定义泛型类和泛型方法非常简单。泛型类允许你在类中使用一个或多个类型参数，而泛型方法允许在方法级别使用类型参数。
+
+### 定义泛型类
+
+要定义一个泛型类，可以在类名后面使用尖括号 `<T>` 来声明类型参数，然后在类中使用这个类型参数。
+
+例如，一个简单的泛型类可以是这样的：
+
+```java
+public class Box<T> {
+    private T value;
+
+    public void setValue(T value) {
+        this.value = value;
+    }
+
+    public T getValue() {
+        return value;
+    }
+}
+```
+
+这个 `Box` 类使用 `T` 作为类型参数。通过使用 `T`，这个类可以存储和返回任何类型的数据。
+
+### 定义泛型方法
+
+要定义一个泛型方法，可以在方法的返回类型之前使用尖括号 `<T>` 来声明类型参数，然后在方法中使用这个类型参数。
+
+例如，一个简单的泛型方法可以是这样的：
+
+```java
+public class Utils {
+    public <T> void printArray(T[] array) {
+        for (T element : array) {
+            System.out.print(element + " ");
+        }
+        System.out.println();
+    }
+}
+```
+
+这个 `printArray` 方法使用 `<T>` 声明了一个类型参数，在方法内部可以使用这个类型参数来操作传入的数组，而不管数组中实际存储的是什么类型的数据。
+
+这些示例展示了如何在Java中定义泛型类和泛型方法，使得类和方法可以适用于多种不同的数据类型。
+
+# 不同微服务之间实现事务
+
+微服务架构下的数据库事务管理是一个复杂且具有挑战性的问题，因为每个微服务都有自己的数据库，并且事务涉及多个微服务的数据。这里有几种常见的方法可以实现跨微服务的数据库事务：
+
+1. **使用分布式事务管理器（Distributed Transaction Manager）**：
+   - **Two-Phase Commit（两阶段提交）**：通过协调器协调各个参与方（微服务）执行事务的阶段，第一阶段为准备阶段，第二阶段为提交或回滚阶段。这种方法需要使用特殊的事务管理器，如XA协议的实现，但会增加系统的复杂性和性能开销。
+
+2. **Saga模式**：
+   - **事务的补偿**：将长事务分解为多个短事务，并使用补偿事务来处理故障。每个微服务执行自己的局部事务，如果后续的微服务失败，则触发之前成功的微服务执行逆向操作来回滚或补偿。这种模式对系统的侵入性较低，但需要对业务逻辑进行设计和管理。
+
+3. **消息驱动的事务**：
+   - **使用消息队列**：将事务操作转换为消息，并将消息发送到队列中，每个微服务订阅并处理消息。通过确保消息的可靠传递和处理，来实现最终一致性。这种方法使得系统更加异步，并减少了一些直接的耦合，但需要考虑消息的顺序和重复性。
+
+4. **应用层协调**：
+   - **通过服务之间的调用来协调事务**：在业务逻辑中通过调用不同微服务的API来实现事务一致性。这种方式的实现相对简单，但可能导致较高的耦合性。
+
+选择哪种方法取决于系统的需求、复杂性和对一致性的要求。在微服务架构中，通常会结合多种方法来处理不同类型的事务操作。
+
+
+
+# Mono类有哪些流式方法
+
+`Mono` 类是 Reactor 库中用于表示包含零个或一个元素的异步序列的类型。它提供了许多流式方法来进行异步操作和转换。以下是 `Mono` 类中常用的一些流式方法：
+
+### 创建 Mono：
+
+- **`Mono.just(T data)`：** 创建一个包含给定数据的 Mono。
+- **`Mono.empty()`：** 创建一个空的 Mono。
+- **`Mono.error(Throwable error)`：** 创建一个包含错误的 Mono。
+- **`Mono.fromSupplier(Supplier<? extends T> supplier)`：** 通过供应者（Supplier）创建 Mono。
+
+### 转换操作：
+
+- **`map(Function<? super T, ? extends V> mapper)`：** 对 Mono 中的元素进行映射转换。
+- **`flatMap(Function<? super T, ? extends Mono<? extends V>> mapper)`：** 将 Mono 中的元素进行映射转换，并将结果 Mono 连接起来。
+- **`switchIfEmpty(Mono<? extends T> alternate)`：** 如果 Mono 是空的，则使用备用的 Mono。
+
+### 合并操作：
+
+- **`then(Mono<? extends V> other)`：** 当前 Mono 完成后执行另一个 Mono。
+- **`and(Mono<? extends V> other)`：** 合并两个 Mono，返回一个包含两个 Mono 结果的元组。
+
+### 过滤操作：
+
+- **`filter(Predicate<? super T> tester)`：** 对 Mono 中的元素进行过滤操作。
+- **`defaultIfEmpty(T defaultValue)`：** 如果 Mono 是空的，则使用默认值。
+
+### 终端操作：
+
+- **`subscribe()`：** 订阅 Mono 来触发数据处理。
+- **`block()`：** 阻塞并获取 Mono 中的元素。
+- **`blockOptional()`：** 阻塞并获取包含 Mono 中元素的 Optional 对象。
+- **`block(Duration timeout)`：** 在指定时间内阻塞并获取 Mono 中的元素，超时则抛出异常。
+
+这些方法允许你对 `Mono` 进行各种转换、操作和订阅，使得在响应式编程中能够更灵活地处理异步流。
